fix: table sortable headers styling word wrapping; fix: icon with text markup and styling

--- a/src/scss/_helpers.scss
+++ b/src/scss/_helpers.scss
@@ -1,3 +1,7 @@
 .is-pointable {
     cursor: pointer;
 }
+
+.is-title-icon {
+    padding-right: 0.3rem;
+}
